# auv_control_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: AUVCtrlDeviation.msg  AUVCtrlInfo.msg  AUVOutlineStatus.msg
